fix add server button and discovery button being too close

--- a/AlanWalkerTheme/serverList.css
+++ b/AlanWalkerTheme/serverList.css
@@ -51,6 +51,7 @@
     .footer_d71945 {
       background: unset;
       padding: 0;
+      margin: 0;
 
       .listItem_c96c45 {
         margin: 0;
